--- a/src/styles/Profile.css
+++ b/src/styles/Profile.css
@@ -154,6 +154,7 @@ div.upload-resume{
 }
 .login-container {
   background: linear-gradient(to bottom, #7face7, #7face7, #c3cee2,#c3cee2,#c3cee2, #d5d1ce,#d5d1ce, #eebe9a);
+  height: 100vh;
 }
 /*#eebe9a*/
 .custom-form-group input {
