--- a/src/styles/newresources.css
+++ b/src/styles/newresources.css
@@ -3,14 +3,13 @@
     display: flex;
     flex-direction: column;
     background: linear-gradient(to bottom, #7face7, #c3cee2, #d5d1ce, #eebe9a);
-    background-attachment: fixed;
+    background-attachment: flex;
     background-position: center;
     height: 100vh;
-    z-index: 100;
+    z-index: 1000;
     justify-content: flex-start;
     align-items: center;
     overflow-y: scroll;
-    padding-top: 40px;
   }
   
   .tab-container {
@@ -76,7 +75,6 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: calc(33% - 20px);
-    height: 310px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
@@ -184,7 +182,6 @@
     border-radius: 8px;
     padding: 15px;
     width: calc(33% - 20px);
-    height: 300px;
     background-color: rgba(255, 255, 255, 0.301);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
