--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -11,12 +11,48 @@
     height: 100vh;
     background-position: center;
     background-color: rgb(140, 140, 140);
+    overflow-y: scroll
+
   }
   
   .about-container h1 {
-    /* color: #fbad05; */
     text-align: center;
     font-size: 45px;
     font-weight: bolder;
-    /* background-color: rgb(120, 120, 120); */
-  }
+    margin-bottom: 60px;
+}
+
+.about-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.info-section {
+    max-width: 800px;
+    text-align: left;
+}
+
+.info-section h2 {
+    font-size: 30px;
+    color: #333;
+}
+
+.info-section p {
+    font-size: 18px;
+    line-height: 1.6;
+    color: #444;
+}
+
+
+
+.recidivism-image {
+    max-width: 90%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border: 5px solid #333;
+    border-radius: 10px;
+}
