--- a/src/styles/MenuBar.css
+++ b/src/styles/MenuBar.css
@@ -6,7 +6,7 @@ div.fixed {
     background: transparent !important;
   }
   div.sticky {
-    position: fixed;
+    position: fixed; /*changed*/
     top: 0;
     z-index: 99;
     background: transparent !important;
