--- a/src/styles/newresources.css
+++ b/src/styles/newresources.css
@@ -1,5 +1,5 @@
 .resource-container {
-    padding-top: 40px;
+    padding-top: 40px; /* added padding*/
     margin: 0;
     display: flex;
     flex-direction: column;
